--- a/package.json
+++ b/package.json
@@ -45,5 +45,10 @@
     "@commitlint/config-conventional": "^11.0.0",
     "standard": "^16.0.2"
   },
+  "standard": {
+    "ignore": [
+      "public/libraries/**/*.js"
+    ]
+  },
   "private": true
 }
