--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chat",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Chatting website app that uses WebSocket",
   "keywords": [
     "node",
@@ -35,9 +35,11 @@
     "test": "No tests"
   },
   "dependencies": {
+    "@primer/css": "^15.2.0",
     "cookie-session": "^1.4.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
+    "jquery": "^3.5.1",
     "socket.io": "^2.3.0"
   },
   "devDependencies": {
